Revert card flip CSS (Remove Z-index bug)

--- a/source/css/card-flip.css
+++ b/source/css/card-flip.css
@@ -1,4 +1,7 @@
-figure { margin: 0; }
+/* CARD FLIP STYLES (INCLUDING IE FALLBACKS) */
+/* ////////////////////////////////// */
+
+/* ==== STYLES FOR QUESTION CARD ==== */
 
 .flip-container {
 	perspective: 900px;
@@ -6,7 +9,7 @@ figure { margin: 0; }
 	width: 100%;
 }
 
-#card {
+#card, #timerCard {
 	height: 100%;
 	position: absolute;
 	transform-origin: right center;
@@ -15,9 +18,11 @@ figure { margin: 0; }
 	width: 100%;
 }
 
-#card.flipped { transform: translateX( -100% ) rotateY( -180deg ); }
+#card.flipped, #timerCard.flipped {
+    transform: translateX( -100% ) rotateY( -180deg );
+}
 
-#card figure, #slideCard1 figure, #card div, #slideCard1 div {
+#card div, #timerCard div, #onesearch div {
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	display: block;
@@ -26,20 +31,20 @@ figure { margin: 0; }
 	width: 100%;
 }
 
-#card figure h3, #card div h3 { line-height: 1; }
-#card figure p, #card div p { font-weight: normal; }
+#card div h3, #timerCard div h3 { line-height: 1; }
+#card div p, #timerCard div p { font-weight: normal; }
 
-#card .front, #slideCard1 .front { }
-
-#slideCard1 .front { }
-
-#card .back {
+#card .back, #timerCard .timerBack {
 	height: 285px;
 	transform: rotateY( 180deg );
+    z-index: 0;
+}
+
+#card .front {
+    z-index: 10;
 }
 
 .front, .back{
-
 	text-align:center;
 	padding:1em;
 	background:#333;
@@ -50,11 +55,9 @@ figure { margin: 0; }
 .back a:link, .back a:visited{
 	color:#fff;	
 }
-.front{
+.front {
 	background:teal; /*change the css */
-	}
-
-.front-search{  }
+}
 
 .back{
 	background-color:teal;
@@ -62,17 +65,111 @@ figure { margin: 0; }
 	background-repeat:no-repeat;
 	background-size:80%;
 	background-position:30px 90px;
-
 }
 
-.back-search{  }
-
-#info{
+#info {
 	padding:0;
 	margin:2em 0 0 0;
+    cursor: pointer;
 }
 
-#resolveInfo{
+#resolveInfo {
 	padding:0;
 	margin:4em 0 0 0;
+    cursor: pointer;
+}
+
+/* === STYLES FOR TIMER PANEL === */
+
+#timerCard .timerFront {
+    z-index: 10;
+    background: #eee;
+}
+
+.timerFront, .timerBack{
+	height: 285px;
+    background: #ccc;
+}
+
+/* === STYLES FOR ONESEARCH FORM === */
+
+.flip-onesearch-container {
+	perspective: 1200px;
+	position: relative;
+	width: 100%;
+    height: 285px;
+}
+
+#onesearch {
+	height: 100%;
+	position: relative;
+	transform-origin: center center;
+	transform-style: preserve-3d;
+	transition: transform 0.6s;
+	width: 100%;
+}
+
+#onesearch.flipped {
+    transform: rotateX( 180deg );
+}
+#onesearch .back-search {
+	height: 285px;
+    padding: 10px;
+    background: #C7FFF9;
+	transform: rotateX( 180deg );
+    z-index: 0;
+}
+#onesearch .front-search {
+    height: 285px;
+    background:#FFF8B9;
+    padding: 10px;
+    z-index: 10;
+}
+
+/* ///////////////////////////////////////////////////////////////////////////// */
+
+/* CSS target for switching search panel behaviour */
+#mainTimes, #otherTimes, #search-web, #search-lib {
+    cursor: pointer;
+    color: blue;
+}
+
+/* fallback behaviour for IE browsers that do not support 3D transform */
+.no-preserve3d #card.flipped,
+.no-csstransforms3d #card.flipped,
+.no-preserve3d #card.flipped .back,
+.no-csstransforms3d #card.flipped .back,
+.no-preserve3d #onesearch.flipped,
+.no-csstransforms3d #onesearch.flipped,
+.no-preserve3d #onesearch.flipped .back-search,
+.no-csstransforms3d #onesearch.flipped .back-search,
+.no-preserve3d #timerCard.flipped,
+.no-csstransforms3d #timerCard.flipped,
+.no-preserve3d #timerCard.flipped .timerBack,
+.no-csstransforms3d #timerCard.flipped .timerBack {
+    transform: none;
+}
+
+/* ensure the back card shows in IE8/9 when toggle clicked */
+.no-csstransforms3d #card.flipped .back,
+.no-csstransforms3d #onesearch.flipped .back-search,
+.no-csstransforms3d #timerCard.flipped .timerBack {
+    display: block;
+}
+
+/* make the front car visible when page loads in IE8/9 */
+.no-csstransforms3d #card .front,
+.no-csstransforms3d #onesearch .front-search,
+.no-csstransforms3d #timerCard .timerFront  {
+    display: block;
+}
+
+/* Swap out visiblity of front card so back card is visible in IE8/9 */
+.no-preserve3d #card.flipped .front,
+.no-csstransforms3d #card.flipped .front,
+.no-preserve3d #onesearch.flipped .front-search,
+.no-csstransforms3d #onesearch.flipped .front-search,
+.no-preserve3d #timerCard.flipped .timerFront,
+.no-csstransforms3d #timerCard.flipped .timerFront {
+    display: none;
 }
